# rust-sample-rest-api

./: .gitignore  Cargo.toml  LICENSE  README.md
docker/: docker-compose.yaml
migrations/: 20240718174824_add-camerametadata-table.down.sql  20240718174824_add-camerametadata-table.up.sql
src/: config.rs  main.rs
src/handlers/: mod.rs
src/routes/: mod.rs
