[package]
name = "rust-sample-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
configparser = "3"
anyhow = "1"
thiserror = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
dotenvy = "0.15" # Optional for .env loading
prometheus = "0.13"
